# interbotix_ros_arms

./: README.md
hardware_config_files/: 10-interbotix-udev.rules
interbotix_descriptions/: README.md
interbotix_descriptions/urdf/: testing_environment.urdf.xacro  wx200_modified.urdf.xacro
interbotix_examples/interbotix_joy_control/: README.md
interbotix_examples/interbotix_joy_control/scripts/: joy_robot_control.py
interbotix_examples/interbotix_joy_control/src/: joy_control_node.cpp
interbotix_gazebo/: README.md
interbotix_moveit/: README.md
interbotix_moveit/launch/: moveit.rviz
interbotix_sdk/: README.md
interbotix_sdk/include/interbotix_sdk/: arm_poses.h
interbotix_sdk/launch/: arm_run.launch  turret_run.launch
interbotix_sdk/src/: arm_obj.cpp
testing_environment_moveit/: .setup_assistant  CMakeLists.txt  package.xml
testing_environment_moveit/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  testing_environment.srdf
testing_environment_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  multi_arm.launch  multi_arm_description.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  testing_environment.launch  testing_environment_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
testing_environment_moveit/nodes/: simple_client.py
testing_environment_moveit/src/: combine_arm_joints.cpp  manual_poses.cpp  motion_plan_test.cpp  move_group_test.cpp  pseudo_random_arm_poses.cpp  run_through_waypoints.cpp  shape_waypoints.cpp  simple_client.py  simple_server.cpp  waypoint_1.cpp  waypoint_2.cpp  waypoint_3.cpp  zero_gravity.cpp
testing_environment_moveit/srv/: CustomAngle.srv  CustomPosition.srv
